INCLUDE(Common)

SET(PYTHON_FILES
    ConnectorPlugin.py
    ConnectorPlugin_ExportFeature.py
)

SET(XML_RESOURCES
  plugin-Connector.xml
)

ADD_CUSTOM_TARGET(ConnectorPlugin SOURCES ${PYTHON_FILES} ${XML_RESOURCES})

INSTALL(FILES ${PYTHON_FILES} DESTINATION ${SHAPER_INSTALL_PYTHON_FILES})
INSTALL(FILES ${XML_RESOURCES} DESTINATION ${SHAPER_INSTALL_XML_RESOURCES})
