## Copyright (C) 2014-20xx CEA/DEN, EDF R&D

INCLUDE(Common)
INCLUDE(UnitTest)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


SET(PROJECT_HEADERS
    ConstructionAPI.h
    ConstructionAPI_Point.h
    )

SET(PROJECT_SOURCES
    ConstructionAPI_Point.cpp
    )

SET(PROJECT_LIBRARIES
    ModelAPI
    ModelHighAPI
    )

ADD_DEFINITIONS(-DCONSTRUCTIONAPI_EXPORTS ${CAS_DEFINITIONS})
ADD_LIBRARY(ConstructionAPI SHARED ${PROJECT_SOURCES} ${PROJECT_HEADERS})

SET(CMAKE_SWIG_FLAGS "-Wall")

SET_SOURCE_FILES_PROPERTIES(ConstructionAPI.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(ConstructionAPI.i PROPERTIES SWIG_DEFINITIONS "-shadow")

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src/ModelAPI
    ${PROJECT_SOURCE_DIR}/src/ModelHighAPI
    )

TARGET_LINK_LIBRARIES(ConstructionAPI ${PROJECT_LIBRARIES})

SET(SWIG_SCRIPTS
    ${CMAKE_CURRENT_BINARY_DIR}/ConstructionAPI.py
    )

SET(SWIG_LINK_LIBRARIES
    ConstructionAPI
    ModelHighAPI
    ModelAPI
    ${PYTHON_LIBRARIES}
    )

SET(SWIG_MODULE_ConstructionAPI_EXTRA_DEPS ${SWIG_MODULE_ConstructionAPI_EXTRA_DEPS}
    ${PROJECT_SOURCE_DIR}/src/ModelHighAPI/ModelHighAPI.i
    ${PROJECT_HEADERS}
    )

SWIG_ADD_MODULE(ConstructionAPI python ConstructionAPI.i ${PROJECT_HEADERS})
SWIG_LINK_LIBRARIES(ConstructionAPI ${SWIG_LINK_LIBRARIES})

IF(WIN32)
  SET_TARGET_PROPERTIES(_ConstructionAPI PROPERTIES DEBUG_OUTPUT_NAME _ConstructionAPI_d)
ENDIF(WIN32)

INSTALL(TARGETS _ConstructionAPI DESTINATION ${SHAPER_INSTALL_SWIG})
INSTALL(TARGETS ConstructionAPI DESTINATION ${SHAPER_INSTALL_BIN})
INSTALL(FILES ${SWIG_SCRIPTS} DESTINATION ${SHAPER_INSTALL_SWIG})

ADD_UNIT_TESTS(
    TestPoint.py
    )

ADD_SUBDIRECTORY (Test)
